force-app/main/default/objects/ContactInitiativeHistory__c/ContactInitiativeHistory__c.object-meta.xml
<CustomObject>
    <label>Contact Initiative History</label>
    <nameField>
        <label>ContactInitiativeHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Initiative Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>