force-app/main/default/objects/ContactInitiativeHistory__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <label>Attended</label>
    <summaryFilterItems>
        <field>InitiativeSeat__c.Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>InitiativeSeat__c.ContactInitiativeHistory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>