force-app/main/default/objects/ContactInitiativeHistory__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <label>Confirmed</label>
    <summaryFilterItems>
        <field>InitiativeSeat__c.Status__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>InitiativeSeat__c.ContactInitiativeHistory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>