force-app/main/default/objects/ContactInitiativeHistory__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Contact Initiative Histories</relationshipLabel>
    <relationshipName>Contact_Initiative_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>