force-app/main/default/objects/ContactInitiativeHistory__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <summaryForeignKey>InitiativeSeat__c.ContactInitiativeHistory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>