force-app/main/default/objects/ContactInitiativeHistory__c/fields/SeatSinceAttendance__c.field-meta.xml
<CustomField>
    <fullName>SeatSinceAttendance__c</fullName>
    <label>Seat Since Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>